--- a/index4.html
+++ b/index4.html
@@ -67,12 +67,20 @@
 	        }
 			#click{
 				font-size: 30px;
-				margin: 0 20px 50px 0;
+				
+			}
+		    #click1{
+				font-size: 30px;
 				
 			}
 	    </style>
 
 	<body>
+		<div class="click1">
+			<div>
+				<a href="index5.html">下一页</a>
+			</div>
+		</div>
 		
 	    <h1>
 	        <span>防</span>
