--- a/index4.html
+++ b/index4.html
@@ -78,7 +78,7 @@
 	<body>
 		<div class="click1">
 			<div>
-				<a href="index5.html">下一页</a>
+				<a href="index.html">下一页</a>
 			</div>
 		</div>
 		
