--- a/index1.html
+++ b/index1.html
@@ -90,7 +90,7 @@
 				
 			</div>
 		       <div class="links">
-					<a href="http://127.0.0.1:8848/fanzhapian2/index.html">返回导航</a>
+					<a href="index.html">返回导航</a>
 					</div>
 	</body>
 </html>
