--- a/index3.html
+++ b/index3.html
@@ -73,7 +73,7 @@
 	</head>
 
 	<body>
-		<a href="http://127.0.0.1:8848/fanzhapian2/index.html">返回导航</a>
+		<a href="index.html">返回导航</a>
 		<div class="box" id="box">
 			<div class="inner">
 				<!--轮播图-->
