--- a/index4.html
+++ b/index4.html
@@ -78,7 +78,7 @@
 	<body>
 		<div class="click1">
 			<div>
-				<a href="index.html">返回导航</a>
+				<a href="index.html"><img src="img/21.png" width="30" height="30"></a>
 			</div>
 		</div>
 		
@@ -95,7 +95,7 @@
 		<br><br><br><br><br>
 		<div class="click">
 			<div>
-				<a href="index5.html">下一页</a>
+				<a href="index5.html"><img src="img/22.png" width="30" height="30"></a>
 			</div>
 		</div>
 			
