--- a/index5.html
+++ b/index5.html
@@ -25,10 +25,10 @@
 	<body>
 		<div class="image1"><img src="img/18.png"></div>
 		<div class="links">
-			<a href="index4.html">上一页</a>
+			<a href="index4.html"><img src="img/21.png" width="30" height="30"></a>
 		</div>
 		<div class="links1">
-			<a href="index6.html">下一页</a>
+			<a href="index6.html"><img src="img/22.png" width="30" height="30">返回</a>
 		</div>
 		
 			
