--- a/index6.html
+++ b/index6.html
@@ -28,7 +28,7 @@
 			<a href="index5.html"><img src="img/21.png" width="30" height="30"></a>
 		</div>
 		<div class="button1">
-			<a href="index7.html"><img src="img/22.png" width="30" height="30">返回</a>
+			<a href="index7.html"><img src="img/22.png" width="30" height="30"></a>
 		</div>
 		
 			
