--- a/index7.html
+++ b/index7.html
@@ -25,7 +25,7 @@
 	<body>
 		<div class="image3"><img src="img/20.png"></div>
 		<div class="button2">
-			<a href="index5.html">上一页</a>
+			<a href="index5.html"><img src="img/21.png" width="30" height="30"></a>
 		</div>
 		<div class="button3">
 			<a href="index.html">>返回导航</a>
