--- a/index5.html
+++ b/index5.html
@@ -28,7 +28,7 @@
 			<a href="index4.html"><img src="img/21.png" width="30" height="30"></a>
 		</div>
 		<div class="links1">
-			<a href="index6.html"><img src="img/22.png" width="30" height="30">返回</a>
+			<a href="index6.html"><img src="img/22.png" width="30" height="30"></a>
 		</div>
 		
 			
