--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>长恨歌</title>
+    <title>案例</title>
     <meta charset="utf-8" />
     <style type="text/css">
       html,body{
